CHANGES IN FLTK 1.3.2

    1.3.2 ABI FEATURES
	(To enable the following ABI features, put: #define FLTK_ABI_VERSION 10302
	 at the top of your FL/Enumerations.H and rebuild FLTK and your app)

        - Fl_Tree optimized to support large trees (eg. 100k items):
	  Added _next_sibling and _prev_sibling to Fl_Tree_Item class,
	  and support methods.

CHANGES IN FLTK 1.3.1

	- Fixed Fl_Input_::maximum_size() documentation and replace() method
	  to honor maximum_size() as number of allowed characters (STR #2747).
	- Fixed a potential crash if Fl_Double_Window::flush() was called
	  before show()
	- Fixed regression (in FLTK 1.3.0) that could clear a radio
	  button by using the keyboard (space or shortcut) (STR #2748)
	- Fixed fl_pie() drawing too small on X11 (STR #2703)
	- Fixed Fl_Menu issue with unusual menu flags (STR #2680)
	- Fixed Windows DLL import of fl_xid() (STR #2670)
	- Added Fl::screen_work_area() functions that compute the work area
	of a screen. These functions improve the positioning of menus.
	Changed Fl::x(), Fl::y(), Fl::w(), Fl::h() functions
	to return the origin and size of the work area of the main screen
	(STR #2695 + 2697)
	- Created the FL_SCREEN_CONFIGURATION_CHANGED event that is triggered
	when a screen is added, removed, moved or when resolution is changed
	(STR #2600)
	- Improved the description of page size and orientation by 
	Fl_PostScript_File_Device.

CHANGES IN FLTK 1.3.0

	  New Features

	- Added UTF-8 Unicode support throughout FLTK and Fluid
	- Added Fl_Tree widget for hierarchical views
	- Added Fl_Table widget for widget layout
	- Added Fl_Native_Filechooser as a widget and global options
	- Added printing support (Fl_Printer class and friends) for native
	  printing on Windows and Mac OS X, PostScript printing on X11
	  with CUPS or lp, and PostScript file output on all platforms
	- Added basic Fl_Device abstraction layer for all drawing functions
	- Moved OS X code base to the more modern Cocoa toolkit thanks